infra/api-dispatcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcat-execution-service-api
  namespace: cs4094-22646-s26-web-cat-execution-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webcat-execution-service-api
  template:
    metadata:
      labels:
        app: webcat-execution-service-api
    spec:
      imagePullSecrets:
        - name: registry-credential 
      serviceAccountName: webcat-dispatcher-sa
      containers:
        - name: api
          image: ghcr.io/sytraore/job-queue-scheduler/execution-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          livenessProbe:
            httpGet: { path: /api/v1/health, port: 3333 } 
            initialDelaySeconds: 20 
            periodSeconds: 30
          readinessProbe:
            httpGet: { path: /api/v1/health, port: 3333 }
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1000m"
              memory: 512Mi
          volumeMounts:
            - name: submissions
              mountPath: /data/submissions
        - name: dispatcher
          image: ghcr.io/sytraore/job-queue-scheduler/execution-service:latest
          imagePullPolicy: Always
          command: ["node", "ace.js", "dispatcher:run"]
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1000m"
              memory: 512Mi
          volumeMounts:
            - name: submissions
              mountPath: /data/submissions
      volumes:
        - name: submissions
          persistentVolumeClaim:
            claimName: webcat-submissions-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webcat-execution-service-api
  namespace: cs4094-22646-s26-web-cat-execution-service
spec:
  type: ClusterIP
  selector:
    app: webcat-execution-service-api
  ports:
    - name: http
      port: 3333
      targetPort: 3333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcat-execution-service-api
  namespace: cs4094-22646-s26-web-cat-execution-service
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: web-cat-execution-service.discovery.cs.vt.edu 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webcat-execution-service-api
                port:
                  number: 3333
